<resources>
    <string name="app_name">BeautyCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bath">Bath</string>
    <string name="lotion">Body Lotion</string>
    <string name="cleansing">Cleansing</string>
    <string name="moisturising">Moisturising</string>
    <string name="nourishing">Nourishing</string>
    <string name="toning">Toning</string>
    <string name="astring">Astringent</string>
    <string name="skintyp">Skin oil Types</string>
    <string name="title_activity_cleansing">Cleansing</string>
    <string name="acne">Acne</string>
    <string name="spots">Spots</string>
    <string name="boils">Boils/Pustules</string>
    <string name="prickly">Prickly Heat</string>
    <string name="blotch">Blotchiness</string>
    <string name="freck">Freckles</string>
    <string name="facemassage">Face Massage</string>
    <string name="homef">Home Facial</string>
    <string name="facep">Face Pack</string>
    <string name="fhair">Facial Hair</string>
    <string name="title_activity_bathcontent">Bathcontent</string>
    <string name="title_activity_body_lotion">BodyLotion</string>
    <string name="title_activity_moisturising">Moisturising</string>
    <string name="title_activity_nourishing">Nourishing</string>
    <string name="title_activity_toning">Toning</string>
    <string name="title_activity_astringent">Astringent</string>
    <string name="title_activity_skin_types">SkinTypes</string>
    <string name="title_activity_acne">Acne</string>
    <string name="title_activity_spots">Spots</string>
    <string name="title_activity_boils_pustules">Boils and Pustules</string>
    <string name="title_activity_prickly_heat">Prickly Heat</string>
    <string name="title_activity_blotchiness">Blotchiness</string>
    <string name="title_activity_freckles">Freckles</string>
    <string name="title_activity_face_massage">Face Massage</string>
    <string name="title_activity_home_facial">Home Facial</string>
    <string name="title_activity_face_pack">Face Pack</string>
    <string name="title_activity_facial_hair">Facial Hair</string>
    <string name="eyecream">Eye Cream</string>
    <string name="sparkeye">Sparkling Eyes</string>
    <string name="title_activity_eye_cream">Eye Cream</string>
    <string name="title_activity_sparkling_eyes">Sparkling Eyes</string>
    <string name="scabies">Scabies</string>
    <string name="ecz">Eczema</string>
    <string name="psoriasis">Psoriasis</string>
    <string name="allergy">Allergy</string>
    <string name="title_activity_scabies">Scabies</string>
    <string name="title_activity_eczema">Eczema</string>
    <string name="title_activity_psoriasis">Psoriasis</string>
    <string name="title_activity_allergy">Allergy</string>
    <string name="title_activity_dandruff">Dandruff</string>
    <string name="title_activity_hair_conditioner">Hair Conditioner</string>
    <string name="title_activity_patchy_baldness">Patchy Baldness</string>
    <string name="title_activity_greying_hair">Greying Hair</string>
    <string name="title_activity_hair_dye">Hair Dye</string>
    <string name="title_activity_hair_shampoo">Hair Shampoo</string>
    <string name="title_activity_cleansing_cream">Cleansing Cream</string>
    <string name="title_activity_scrolling_activityscrub">ScrollingActivityscrub</string>
    <string name="title_activity_herbal_body_lotion">Herbal Body Lotion</string>
    <string name="bath1">Oatmeal Scrub</string>
    <string name="bath2">Sugar Scrub</string>
    <string name="bath3">Body Scrub</string>
    <string name="bath4">Milk Bath</string>
    <string name="bs">Bath and Scrub</string>
    <string name="bath5">Oatmeal Bath</string>
    <string name="bath6">Honey Bath</string>
    <string name="bath7">Starchy Bath</string>
    <string name="bath8">Herb Bath</string>
    <string name="bath9">Bath Oils</string>
    <string name="bath10">Bubble Bath</string>
    <string name="bath111">Bath Powder</string>
    <string name="bath1212">Sugar Bath</string>
    <string name="bath13">Special Massage</string>
    <string name="lotion1">Rose and Lime Lotion</string>
    <string name="lotion2">Blue Satin Body Lotion</string>
    <string name="lotion3">Lavender Body Lotion</string>
    <string name="lotion4">Almond Body Lotion</string>
    <string name="lotion5">Body Massage Cream</string>
    <string name="bath11">Mix together 1 tablespoon\n each of finely ground orange
        peel and ground almonds.This is slightly abrasive and very cleansing.\n Take roughly a teaspoon in the palm of your hand,mix with
    a little water and use the paste to scrub the skin then wash.</string>
    <string name="bath22">Soap your face well,adding a small handful of sugar to the lather. Massage this in for couple of minutes,
    then rinse off with warm water.This scrub is very useful for a spotty and sluggish looking skin</string>
    <string name="bath33">Mix sugar and rose water in a pan over a low heat.\n When it begins to caramel remove from the heat and add to it
    beaten yolk of an egg.Replace it on low heat for a minute and mix to it one teaspoon of lemon juice.This recipe is very useful for dry skins.</string>
    <string name="bath44">Add a handful of powdered milk to the bathwater</string>
    <string name="bath55">Use one tablespoon of oatmeal in bath.Oatmeal and bran contain oils and vegetable hormones which oothe and
    soften the skin.</string>
    <string name="bath66">Add a teaspoon of honey to your bath water.Relieves tiredness.</string>
    <string name="bath77">Mix a few tablespoons of laundry starch and a teaspoon of glycerine and add to bath water.It leaves your skin
    beautifully smooth,tight and soft</string>
    <string name="bath88">Lavender,hyssop,mint,borage,rosemary,balm or camomile are useful herbs which can be used in bath water either separately
    or in a mixture.</string>
    <string name="bath99">Add any oil that is almond,olive or sunflower to bath water. Baby oil or mineral oil is not suitable as
    it cannot be absorbed by the skin.</string>
    <string name="bath1010">Mix together one Egg,\n 1/2 cup shampoo and 1 teaspoon gelatine with an electric beater.Add the mixture to bath
    water when the tap is running.</string>
    <string name="bath111m">Mix the following in a jar and use a little quantity in bathwater:\n
    3 tablespoons Oatmeal flour,\n 1tablespoon oatmeal bran,\n 1 tablespoon Ground almonds,\n 1 tablespoon Wheat flour,\n
        Perfume 5 to 6 drops.</string>
    <string name="bath1212m">
        Collect the following:\n Sugar-2 tablespoons,\n Water-2 tablespoons,\n Egg yolk-beaten-One,\n Lemon juice-1 teaspoon\n
    Put sugar and water in a pan,over a low heat.When it begins to caramelise,remove from the heat and add egg yolk. Replace it on the low heat for
    a minute and mix to it lemon juice.\n This is very ideal scrub for slightly dry skin or for a spotty and sluggish looking skin.\n To apply sugar scrub,
    soap your face well, adding a small handful of sugar to the lather. Massage for a couple of minutes, then rinse off with warm water.</string>
    <string name="dandruff1a">Hot Oil Therapy</string>
    <string name="dandruff1b">Massage hot oil into the scalp at bedtime. Next morning, rub lemon juice mixed with cosmetic vinegar (mix 1:2 ratio)
     into the scalp before an hour.</string>
    <string name="dandruff1c">Give the hair a good wash with egg shampoo.\n Egg shampoo is one of the oldest beauty recipes.Eggs are full of
    proteins. Beat up 1 or 2 eggs with a cup of water and massage thoroughly into your wet hair and leave it on for 5-10 minutes. Rinse off thoroughly
     and do not use hot water for rinsing.</string>
    <string name="dandruff1d">Another method is to beat 1 egg in a cup of water and mix it to 1 or 2 tablespoons of shampoo. As a last rinse,
    use the juice of one lemon in a cup of hot water. Continue this treatment once a week for three months.</string>
    <string name="dandruff2a">Stroking the Hair</string>
    <string name="dandruff2b">Give hair a hundred strokes every night with brush or comb. Remember that root of each hair is the
    sebaceous gland that ooze oil to keep the hair soft and gleaming. Take the brush from root of hair to very end of the hair so that
    oil is carried to each hairtip.\n Hair should be brushed or combed gently or lightly when wet as there is a danger of being stretched or
    weakened.</string>
    <string name="dandruff3a">Hair Nourishing Recipe</string>
    <string name="dandruff3b">Boil 5 teaspoons of dried used tea leaves in lime water and use it as the last rinse after shampoo, giviing the
    hair a shine.</string>
    <string name="dandruff4a">Anti-dandruff Lotion</string>
    <string name="dandruff4b">Mix 2 tablespoons of cosmetic vinegar and 6 tablespoons of hot water. Dab with cotton wool into scalp, parting
     hair with a comb at bedtime. Next morning wash the hair with shampoo.After the hair is cleansed, pour over as last rinse a mixture
    of 3 tablespoons of cosmetic vinegar and 1 cup of hot water. Do this twice a week for 3 months.</string>
    <string name="dandruff5a">Apple Juice Tonic</string>
    <string name="dandruff5b">Mix together 1 tablespoon of pure apple juice and 3 tablespoons warm water and massage into the scalp, three
    times a week. This recipe helps to fight dandruff.</string>
    <string name="dandruff6a">Rosemary and Borax Lotion</string>
    <string name="dandruff6b">Mix 5 tablespoons of strong rosemary infusion with a pinch of borax and massage into the scalp daily.</string>
    <string name="dandruff7a">Nasturtium Tea</string>
    <string name="dandruff7b">Mix 1 drop of essential oil thyme with nasturtium tea to make a strong infusion. It should be used to rinse the hair or
    massage the scalp to cure dandruff.\n</string>
    <string name="astringent1a">Honey Water Astringent</string>
    <string name="astringent1b">Sandalwood oil-8 tablespoons,\n Musk or sandalwood chips-a pinch,\n Bergamot oil-1 teaspoon,\n Lavender
    oil-1/4 teaspoon,\n Clove oil-1/8 teaspoon,\n Rosewater-4 tablespoons,\n Orange flower water-4 tablespoons,\n Honey-1 tablespoon</string>
    <string name="astringent1c">Mix the ingredients together in a jar which should be air-tight and keep for two weeks, shaking it daily.</string>
    <string name="astringent2a">Rosemary Water Astringent</string>
    <string name="astringent2b">Rosemary-2 tablespoons,\n Rosemary-2 tablespoons,\n Rose water-1/2 cup,\n Witch-hazel-1/4 cup,\n Orange peel-
    1/4 cup,\n Lemon peel &amp; pith-1/2 cup,\n Mint-4 sprigs</string>
    <string name="astringent2c">Mix the ingredients together in a large air-tight bottle and let it stand for 48 to 72 hours, shaking 
    frequently.</string>
    <string name="astringent3a">Lemon Astringent</string>
    <string name="astringent3b">Lemon juice-4 tablespoons,\n Peppermint extract-1/2 teaspoon,\n Witch-hazel - 8 tablespoons,\n Alcohol-2 
    tablespoons</string>
    <string name="astringent3c">Mix the ingredients together in a large bottle for 24 hours, then strain and use for greasy skin.</string>
    <string name="astringent4a">Camphor Astringent</string>
    <string name="astringent4b">Rosewater-1/2 cup,\n Witch-hazel - 1/2 cup,\n Distilled water-1/2 cup,\n Camphor spirit-1 tablespoon,\n
    Blue colouring-2 drops</string>
    <string name="astringent4c">Mix the ingredients in a large bottle. To make the lotion stronger, add a pinch of alum. Strain and use to
    tighten and tone the skin.\n</string>
</resources>