<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_danduff_remedy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.reshmaharidhas.reshma.beautycare.DanduffRemedy"
    tools:showIn="@layout/activity_danduff_remedy">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageViewdan1"
        app:srcCompat="@drawable/pin"
        android:layout_width="25dp"
        android:layout_height="25dp" />
    <TextView
        android:id="@+id/textViewdan1a"
        android:text="@string/dandruff1a"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageViewdan1"
        android:layout_toEndOf="@+id/imageViewdan1"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textViewdandruff1b"
        android:textColor="@color/black"
        android:text="@string/dandruff1b"
        android:layout_below="@id/textViewdan1a"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/textViewdandruff1c"
        android:text="@string/dandruff1c"
        android:layout_below="@id/textViewdandruff1b"
        android:gravity="center"
        android:background="@color/eggyellow"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/textViewdandruff1d"
        android:text="@string/dandruff1d"
        android:layout_below="@id/textViewdandruff1c"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <View
        android:id="@+id/view1"
        android:background="@color/colorPrimary"
        android:layout_below="@id/textViewdandruff1d"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ImageView
        android:id="@+id/imageViewdan2"
        app:srcCompat="@drawable/pin"
        android:layout_below="@id/view1"
        android:layout_width="25dp"
        android:layout_height="25dp" />
    <TextView
        android:id="@+id/textViewdandruff2a"
        android:text="@string/dandruff2a"
        android:layout_below="@id/view1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/imageViewdan1"
        android:layout_toEndOf="@+id/imageViewdan1"/>
    <TextView
        android:id="@+id/textViewdandruff2b"
        android:text="@string/dandruff2b"
        android:layout_below="@id/textViewdandruff2a"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <View
        android:id="@+id/view2"
        android:layout_below="@id/textViewdandruff2b"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ImageView
        android:id="@+id/imageViewdan3"
        app:srcCompat="@drawable/pin"
        android:layout_below="@id/view2"
        android:layout_width="25dp"
        android:layout_height="25dp" />
    <TextView
        android:id="@+id/textViewdandruff3a"
        android:text="@string/dandruff3a"
        android:layout_below="@id/view2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/imageViewdan1"
        android:layout_toEndOf="@+id/imageViewdan1"/>
    <TextView
        android:id="@+id/textViewdandruff3b"
        android:text="@string/dandruff3b"
        android:layout_below="@id/textViewdandruff3a"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <View
        android:id="@+id/view3"
        android:layout_below="@id/textViewdandruff3b"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ImageView
        android:id="@+id/imageViewdan4"
        android:layout_below="@id/view3"
        app:srcCompat="@drawable/pin"
        android:layout_width="25dp"
        android:layout_height="25dp" />
    <TextView
        android:id="@+id/textViewdandruff4a"
        android:text="@string/dandruff4a"
        android:layout_below="@id/view3"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/imageViewdan1"
        android:layout_toEndOf="@+id/imageViewdan1"/>
    <TextView
        android:id="@+id/textViewdandruff4b"
        android:text="@string/dandruff4b"
        android:textSize="16sp"
        android:layout_below="@id/textViewdandruff4a"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <View
        android:id="@+id/view4"
        android:layout_below="@id/textViewdandruff4b"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ImageView
        android:id="@+id/imageViewdan5"
        android:layout_below="@id/view4"
        app:srcCompat="@drawable/pin"
        android:layout_width="25dp"
        android:layout_height="25dp" />
    <TextView
        android:id="@+id/textViewdandruff5a"
        android:text="@string/dandruff5a"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@id/view4"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/imageViewdan1"
        android:layout_toEndOf="@+id/imageViewdan1"/>
    <TextView
        android:id="@+id/textViewdandruff5b"
        android:text="@string/dandruff5b"
        android:layout_below="@id/textViewdandruff5a"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <View
        android:id="@+id/view5"
        android:layout_below="@id/textViewdandruff5b"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ImageView
        android:id="@+id/imageViewdan6"
        app:srcCompat="@drawable/pin"
        android:layout_below="@id/view5"
        android:layout_width="25dp"
        android:layout_height="25dp" />
    <TextView
        android:id="@+id/textViewdandruff6a"
        android:text="@string/dandruff6a"
        android:layout_below="@id/view5"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/imageViewdan1"
        android:layout_toEndOf="@+id/imageViewdan1"/>
    <TextView
        android:id="@+id/textViewdandruff6b"
        android:text="@string/dandruff6b"
        android:layout_below="@id/textViewdandruff6a"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <View
        android:id="@+id/view6"
        android:background="@color/colorPrimary"
        android:layout_below="@id/textViewdandruff6b"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ImageView
        android:id="@+id/imageViewdan7"
        app:srcCompat="@drawable/pin"
        android:layout_below="@id/view6"
        android:layout_width="25dp"
        android:layout_height="25dp" />
    <TextView
        android:id="@+id/textViewdandruff7a"
        android:layout_below="@id/view6"
        android:text="@string/dandruff7a"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/imageViewdan1"
        android:layout_toEndOf="@+id/imageViewdan1"/>
    <TextView
        android:id="@+id/textViewdandruff7b"
        android:text="@string/dandruff7b"
        android:layout_below="@id/textViewdandruff7a"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
</android.support.v4.widget.NestedScrollView>
